# bbsr_challenge_team4

./: .gitignore  Assess_Mapping_TBS_Products.py  Dockerfile  Initiate_Test_Mapping_TBS_Products.py  LICENSE  README.md  README_Test_TBS_mapping.md  Reference_results_UNmapped_TBS_products_with_OBD_genericUUIDs.csv  SpecificNameDE_with_GenericCandidates_1.csv  data_ProductTBS.py  map_UnmappedGenericOBD_ProductTBS.py  pyproject.toml  requirements.txt  tasks.py  unmapped_generic_tbs_mapping.csv
.devcontainer/: devcontainer.json
app/: gunicorn_conf.py  main.py
app/configuration/: __init__.py  config.ini  getConfig.py
app/data/: data_loader.py
app/functionalities/: data_loader.py  helper_functions.py  llm.py  material_mapping.py  reembedding.py  update_oekobaudat_version.py  uuid.py  uuid_handler.py
app/model/: BenchmarkModel.py  RouterModels.py
app/routers/: config.py
app/templates/: index.html  input.html  style.css
data/processed/: generic_data.csv  specific_data.csv
dockerfiles/: api.dockerfile  train.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
notebooks/: Circular Construction .ipynb  Improved  semantic matching pipeline  Using Multilingual model  generic_materials_clean_version.csv  mapping_system_minh_version.ipynb  newly_exp
results/: Matched_Unmapped_Specific_Generic_NameCategory.csv  semantic_matches-checkpoint.csv  semantic_matches_strong_filtered_sorted.csv
tests/: Assess_Mapping_TBS_Products.ipynb  Initiate_Test_Mapping_TBS_Products.ipynb  Reference_results_mapped_TBS_products_with_OBD_genericUUIDs.csv  conftest.py  test_data.py
(+33 files in other folders)
