[tool.poetry]
name = "bbsr_challenge_team4"
version = "0.1.0"
description = "A simple webapp for the bbsr challenge"
authors = ["Gustav Geissler <gustav.geissler@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
gunicorn = "^23.0.0"
pymongo = "^4.6.3"
nested-lookup = "^0.2.25"
fastapi = "^0.109.0"
uvicorn = "^0.20.0"
dateparser = "^1.1.4"
schwifty = "^2022.9.0"
email-validator = "^1.3.0"
pandas = "^2.2.3"
jinja2 = "^3.1.6"
python-multipart = "^0.0.20"
loguru = "^0.7.3"
requests = "^2.32.3"
apscheduler = "^3.11.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
httpx = "^0.23.1"
setuptools = "^78.1.0"
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
